# QuantEM

./: .gitignore  Cargo.toml  Finding_Pauli_Checks.py  LICENSE.txt  README.md  compiler.py  mod_sabre_swap.py  pauli_checks.py  pin_qubits.py  pyproject.toml  tt_convert_to_pcs_largest_clifford_gate.py  utils.py
QuditEM/: .gitignore  README.md
QuditEM/Experiments/: PCS_experiments.ipynb  basic_error_mitigation.ipynb  experiment1.ipynb  ghz_em.ipynb
QuditEM/src/qudit_ops/: operators.py  pcs.py  pcs_measurements.py
example_notebooks/: Iceberg.ipynb  afpc_check_injection.ipynb  auto_check_inject_example.ipynb  end_to_end.ipynb  end_to_end_Iceberg.ipynb  end_to_end_pcs.ipynb  mappings_example.ipynb  mod_sabre_swap.py  pce_demo.ipynb  pcs_full_example.ipynb  pcs_on_largest_clifford.ipynb  pin-qubits-example.ipynb  pin-qubits-example_old.ipynb  qcc_circuit_4.ipynb  qcc_circuit_6.ipynb  qcc_circuit_8.ipynb  test_compiler.ipynb
qudits/: README.md
qudits/Experiments/: experiment1.ipynb
qudits/src/qudit_ops/: operators.py
src/: lib.rs
src/quantem/: Finding_Pauli_Checks.py  __init__.py  compiler.py  finding_pauli_checks.py  iceberg_code.py  iceberg_codegen.py  mod_sabre_swap.py  pauli_check_extrapolation.py  pauli_checks.py  pin_qubits.py  utils.py
src/sabre/: heuristic.rs  mod.rs  neighbor_table.rs  route.rs
src/seqc/: __init__.py
tests/: __init__.py  post_selection_tests.py  test_compiler.py  test_pce.py
