[package]
name = "quantem_rust"
edition = "2021"
rust-version = "1.79"  # Keep in sync with README.md and rust-toolchain.toml.
license = "Apache-2.0"
version = "0.0.1"

[lib]
# See https://github.com/PyO3/pyo3 for details
name = "rust"           # module to be nested into Python package
crate-type = ["cdylib"]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qiskit-accelerate = { git = "https://github.com/Qiskit/qiskit.git" }
qiskit-circuit = { git = "https://github.com/Qiskit/qiskit.git" }    # Only needed for heuristic.rs
rayon = "1.10"
numpy = "0.24"
rand = "0.9"
rand_pcg = "0.9"
rand_distr = "0.5"
ahash = "0.8.11"
num-traits = "0.2"
num-complex = "0.4"
rustworkx-core = "0.16"
num-bigint = "0.4"
faer = "0.19.3"
itertools = "0.13.0"
thiserror = "1.0"
ndarray_einsum_beta = "0.7"
once_cell = "1.19.0"

[dependencies.pyo3]
version = "0.24.0"
features = [
    "abi3-py39",
    "hashbrown",
    "indexmap",
    "num-complex",
    "num-bigint",
    "smallvec",
]

[dependencies.smallvec]
version = "1.13"
features = ["union"]

[dependencies.ndarray]
version = "0.16"
features = ["rayon"]

[dependencies.approx]
version = "0.5"
features = ["num-complex"]

[dependencies.hashbrown]
version = "0.15.2"
features = ["rayon"]

[dependencies.indexmap]
version = "2.5.0"
features = ["rayon"]

[dependencies.faer-ext]
version = "0.2.0"
features = ["ndarray"]

[dependencies.pulp]
version = "0.18.22"
features = ["macro"]
